added header, removed scratchpad, changed marquee font color to yellow with black solid shadow

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     <title>Crypto Dashboard</title>
   </head>
   <body>
+    <h1 style="color: white; margin-left: 10%;">Crypto Dashboard</h1>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
