--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <title>Crypto Dashboard</title>
   </head>
   <body>
-    <h1 style="color: white; margin-left: 10%;">Crypto Dashboard</h1>
+    <h1 style="color: white; margin-left: 10%; text-shadow: #000 2px 2px 6px;">Crypto Dashboard</h1>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
