--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,9 @@
     <title>Crypto Dashboard</title>
   </head>
   <body>
-    <h1 style="color: white; margin-left: 10%; text-shadow: #000 2px 2px 6px;">Crypto Dashboard</h1>
+    <div class="titlebar">
+    <h1 style="color: white; margin-left: 10%;   text-shadow: 1px 1px 2px #383e6585;    ">Crypto Dashboard</h1>
+    </div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -41,7 +43,8 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
-  <footer style="margin-top: 10%;">
-   
+  <footer style=" bottom: 0; color: gray; text-align: center;">
+    <br><br>
+   built by Jeremiah Moore 👨‍💻 2022 <br><br>
   </footer>     
 </html>
